# UofM-Dearborn

./: .gitignore  README.md  ai-rules.txt
2024 Fall/Calculus/: pyproject.toml
2024 Fall/Calculus/homework/5.1/: q1.txt  q4.txt
2024 Fall/Calculus/homework/5.2/: q2.txt  q3.txt
2024 Fall/Calculus/in-class/: 12-12-24
2024 Fall/Calculus/in-class/11-19-24/: class-notes.py
2024 Fall/Calculus/in-class/12-5-24/: class-notes.py  visualization.py
2024 Fall/Calculus/quiz-studying/4.3/: 4.3-Q1.py
2024 Fall/Calculus/quiz-studying/4.7/: q1.txt  q4-visual.py  q4.txt
2025 Winter/calculus/: homework.ipynb
2025 Winter/historical-geology/lecture/: class-notes.ipynb
2025 Winter/microeconomics/: Lecture-notes.ipynb
Calculus/: EXAM-REVIEW.md  README.md  environment.yml  pyproject.toml  requirements.txt
Calculus/Nov 19th/: example-1.md
Calculus/Nov 21/: class-notes.py  display-notes.md
Calculus/homework/: 4.3  4.7.ipynb
Calculus/homework/5.1/: q2.txt  q4.py  q5.txt
Calculus/homework/5.2/: q1.txt
Calculus/homework/visualizations/: box-cost-optimization.py
Calculus/in-class/11-14-24/: markdown-version.md
Calculus/in-class/11-21-24/: display-notes.md
Calculus/in-class/12-3-24/: class-notes.py
Calculus/in-class/Nov 14th/: examples.py
Calculus/in-class/Nov 21/: class-notes.py
Calculus/quiz-studying/4.3/: 4.3-Q4.py  4.3-Q7.py  4.3-Q8.py
Calculus/quiz-studying/4.7/: q1-visual.py  q2-visual.ipynb  q2-visual.py  q2.txt
Calculus/studying/4.7/: q3.txt
historical-geology/lecture/: week1.md
microeconomics/week 1/: notes.md
